[tool.poetry]
name = "mlflow-tracking"
version = "0.1.0"
description = ""
authors = ["qaicodes <153209963+qaicodes@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mlflow = "==2.5.0"
psycopg2-binary = "~=2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
